--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.74.1"
+    "sass": "^1.74.1",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/node": "^20",
